fixes images going out of boundaries

--- a/assets/scss/custom/_media.scss
+++ b/assets/scss/custom/_media.scss
@@ -64,7 +64,7 @@
         position: absolute;
         object-fit: cover;
         width: 100%;
-        height: 100%;
+        height: 100% !important;
         left: 0;
     }
     p {
@@ -76,7 +76,7 @@
         &::before {
             content: '\F4F5';
             font-family: bootstrap-icons !important;
-            line-height: 1; 
+            line-height: 1;
         }
     }
 }
@@ -91,7 +91,7 @@
             gap: 2rem;
             grid-template-columns: 75% calc(26% - 2rem);
         }
-        
+
         @include media-breakpoint-up(lg) {
             button:first-child {
                 grid-row: 1 / 3;
@@ -107,7 +107,7 @@
             button:nth-child(3) {
                 grid-column: 2;
             }
-        } 
+        }
     }
     button {
         background: none;
@@ -211,4 +211,9 @@
 .field--item:has(> img[data-ratio="1:2"]) {
     aspect-ratio: 1 / 2;
     background: var(--bs-gray-500);
+}
+
+main#main-content img {
+    width: 100%;
+    height: auto;
 }
